# cplusminus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
examples/: fib.cpm  first.cpm  lcg.cpm  ll.cpm  map.cpm  printf.cpm  sieve.cpm
src/: ast.rs  err.rs  iw.rs  jit.rs  main.rs  mangler.rs  parser.rs  test.rs
src/bom/: alias.rs  function.rs  mod.rs  module.rs  strct.rs  variable.rs
src/builders/: expr.rs  func.rs  lvalue.rs  mod.rs  refcount.rs  scope.rs  stmt.rs  ty.rs  var.rs
src/codegen/: assertion.rs  builtins.rs  callable.rs  metadata.rs  mod.rs  structure.rs
src/driver/: diags.rs  mod.rs
src/lib/: assert.c  refcount.c
tests/aout/fail/: assert_false.cpm
tests/aout/pass/: assert_true.cpm  fn_ptr_by_name.cpm  ret_uses_hint.cpm  statement_after_return.cpm  var_assign_uses_hint.cpm
tests/jit/fail/: arg_type_mismatch.cpm  break_outside_of_loop.cpm  continue_outside_of_loop.cpm  inc_bool.cpm  inc_let.cpm  inc_struct.cpm  int24_type.cpm  local_func_outofscope.cpm  local_type_alias_outofscope.cpm  main_type_mismatch.cpm  method_call_fails_on_tuple.cpm  named_type_is_not_structural.cpm  tuple_cant_be_impld.cpm  tuple_with_ref_type.cpm  valued_return_in_void.cpm  var_decl_type_err.cpm  void_return_in_valued.cpm  write_to_arg_err.cpm  write_to_let_err.cpm
tests/jit/pass/: addressof.cpm  alloc_frees_after_free_call.cpm  alloc_frees_after_method_call.cpm  alloc_frees_after_self_call.cpm  alloc_frees_in_same_func.cpm  alloc_stress.cpm  arg_uses_hint.cpm  array_access.cpm  (+166 more)
(+104 files in other folders)
