[package]
name = "cpm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
codespan-reporting = "0.11.1"
either = "1.8.1"
inkwell = { version = "0.2.0", features = ["llvm14-0"] }
peg = "0.8.1"
rand = "0.8.5"
tempfile = "3.6.0"
unic-emoji-char = "0.9.0"
unicode-ident = "1.0.9"
unindent = "0.2.1"
